src/bootstrap/test/v0_13/rejects/06_platform_suffix_collision_macos/dup.zg
pub fn value() -> int {
    return 1
}
